--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,23 @@ body {
     text-wrap: balance;
   }
 }
+
+@layer components {
+  .container {
+    @apply max-w-full w-[1440px] px-5 mx-auto;
+  }
+  .btn {
+    @apply bg-gray-500 hover:bg-gray-600 inline-flex items-center justify-center rounded-md  px-4 py-3 text-base font-medium text-white shadow-sm transition-colors  focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2  dark:text-white  dark:focus:ring-gray-300;
+  }
+
+  .heading {
+    @apply text-[44px] leading-[54px] font-[700] text-headingColor;
+  }
+  .text__para {
+    @apply text-[18px] leading-[30px] font-[400] text-textColor mt-[18px];
+  }
+
+  .input {
+    @apply border border-gray-300 rounded-md px-4 py-2 text-base text-gray-700 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:border-transparent;
+  }
+}
